修改图片路径

--- a/jvm/类的加载器/03-测试不同的类加载器.md
+++ b/jvm/类的加载器/03-测试不同的类加载器.md
@@ -4,7 +4,7 @@
 
 获取ClassLoader的途径：
 
-![image-20210405114628576](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210405114628576.png)
+![image-20210405114628576](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210405114628576.png)
 
 说明：
 
