--- a/jvm/类的加载器/06-沙箱安全机制.md
+++ b/jvm/类的加载器/06-沙箱安全机制.md
@@ -13,4 +13,4 @@
 
 所有的Java程序运行都可以指定沙箱，可以定制安全策略。
 
-![image-20210406150223306](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210406150223306.png)
+![image-20210406150223306](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210406150223306.png)
