--- a/jvm/类的加载器/07-自定义的加载器.md
+++ b/jvm/类的加载器/07-自定义的加载器.md
@@ -1,8 +1,8 @@
 # 自定义的加载器
 
-![image-20210406151008198](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210406151008198.png)
+![image-20210406151008198](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210406151008198.png)
 
-![image-20210406151906265](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210406151906265.png)
+![image-20210406151906265](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210406151906265.png)
 
 ```java
 import java.io.BufferedInputStream;
