--- a/jvm/类的生命周期/过程一：加载阶段.md
+++ b/jvm/类的生命周期/过程一：加载阶段.md
@@ -5,13 +5,13 @@
 在Java中数据类型分为基本数据类型和引用数据类型。基本数据类型由虚拟机预先定义，引用数据类型则需要进行类的加载。
 按照Java虚拟机规范，从class文件到加载到内存中的类，到类卸载出内存为止，它的整个生命周期包括如下7个阶段。
 
-![image-20210328153411246](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210328153411246.png)
+![image-20210328153411246](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210328153411246.png)
 
 其中，验证、准备、解析3个部分统称为链接( Linking)
 
 从程序中类的使用过程看：
 
-![image-20210328153904085](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210328153904085.png)
+![image-20210328153904085](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210328153904085.png)
 
 初始化之后就会在方法区中存放这个类的模板。
 
@@ -59,7 +59,7 @@
 
 3.  外部可以通过访问代表Order类的class对象来获取 Orderl的类数据结构。
 
-   ![image-20210328160701958](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210328160701958.png)
+   ![image-20210328160701958](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210328160701958.png)
 
 4. Class类的构造方法是私有的，只有JVM能够创建。 
 
