--- a/jvm/类的加载器/02-类的加载器分类.md
+++ b/jvm/类的加载器/02-类的加载器分类.md
@@ -2,7 +2,7 @@
 
 JVM支持两种类型的类加载器，分别为引导类加载器（Bootstrap Class Loader） 和自定义类加载器（User-Defined ClassLoader）。
 
-![image-20210404113556682](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210404113556682.png)
+![image-20210404113556682](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210404113556682.png)
 
 - 除了顶层的启动类加载器外，其余的类加载器都应当有自己的“父类”加载器。
 - 不同类加载器看似是继承（Inheritance）关系，实际上是包含关系。在下层加载器中，包含着上层加载器的引用。
@@ -17,7 +17,7 @@ JVM支持两种类型的类加载器，分别为引导类加载器（Bootstrap C
 - 出于安全考虑， Bootstrap启动类加载器只加载包名为java、 javax、sun等开头的类
 - 加载扩展类和应用程序类加载器，并指定为他们的父类加载器。
 
-![image-20210405112644136](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210405112644136.png)
+![image-20210405112644136](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210405112644136.png)
 
 使用-XX:+TraceclassLoading参数得到
 
@@ -30,7 +30,7 @@ JVM支持两种类型的类加载器，分别为引导类加载器（Bootstrap C
 - 父类加载器为启动类加载器
 - 从java.ext,dirs系统属性所指定的目录中加载类库，或从JDK的安装目录的jre/lib/ext子目录下加载类库。如果用户创建的JAR放在此目录下，也会自动由扩展类加载器加载。
 
-![image-20210405113225880](C:\Users\93138\AppData\Roaming\Typora\typora-user-images\image-20210405113225880.png)
+![image-20210405113225880](https://github.com/MrL5z2k0/zkNode/tree/main/images/image-20210405113225880.png)
 
 
 
